@@ -5,7 +5,10 @@ netcfg (0.67) UNRELEASED; urgency=low
       entry.
   * Otavio Salvador 
     - Write the common data before the static configuration so the file is
-    not replaced anymore (Closes: #250740).
+      not replaced anymore (Closes: #250740).
+  * Joshua Kwan
+    - add a NETCFG_VERSION thingy so it's easier to figure out who's using
+      what.
 
  -- Per Olofsson <pelle@dsv.su.se>  Mon, 24 May 2004 21:57:42 +0200
 
